src/objects/Client_Deal_Role__c.object
<CustomObject>
    <description>An object to connect contacts with pipeline opportunities</description>
    <fields>
        <fullName>Client_Deal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Deal Name</label>
        <referenceTo>Client_Deals__c</referenceTo>
        <relationshipLabel>Client Deal Roles</relationshipLabel>
        <relationshipName>Client_Deal_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Deal_Role__c</fullName>
        <label>Client Deal Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Final Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Pipeline_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Deal Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Deal Role ID - {0000}</displayFormat>
        <label>Client Deal Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Deal Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>